...
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"/>


            <Button
                android:id="@+id/messageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Turn on bluetooth." />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
